[package]
name = "ascon"
version = "0.1.0"
authors = ["quininer kel <quininer@live.com>"]
description = "A implementation of ASCON authenticated encryption. support `no_std` environment."
repository = "https://github.com/quininer/ascon"
license = "MIT"

[dependencies]
byteorder = { version = "0.5", features = [] }
